<resources>
    <string name="app_name">FiniExShiper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This User name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_turn_on_gps">Please turn on location services. Otherwise you\'ll be logged out</string>
    <string name="no_location_detected">Không tìm thấy vị trí</string>
    <string name="btn_signout">Sign out</string>
    <string name="btn_ok">OK</string>
    <string name="gcm_defaultSenderId">35345353</string>
    <string name="error_server">Xin lỗi.\nHệ thống đang gặp vấn đề.</string>
    <string name="remember_user">Remember me.</string>
</resources>
